--- a/css/error.css
+++ b/css/error.css
@@ -1,22 +1,19 @@
-.main_div
-{
-    background:rgb(207, 207, 205);
+.main_div {
+    background: rgb(207, 207, 205);
 }
 
-#error_container
-{
+#error_container {
     margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding : 5px 20px 20px 20px;
+    padding: 5px 20px 20px 20px;
     border: 2px solid black;
     border-radius: 7px;
     background: white;
 }
 
-#error_container h1
-{
+#error_container h1 {
     font-weight: bold;
     color: rgb(170, 15, 15);
     border-bottom: 1px solid grey;
