--- a/css/footer.css
+++ b/css/footer.css
@@ -1,25 +1,21 @@
-#footer_main_div
-{
+#footer_main_div {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: rgb(229, 231, 229);
-    border-top: 2px outset grey ;
+    border-top: 2px outset grey;
 }
 
-#footer_text_1
-{
+#footer_text_1 {
     margin-left: 10px;
 
 }
 
-#footer_text_2
-{
+#footer_text_2 {
     margin-right: 10px;
     color: black;
 }
 
-#footer_main_div a
-{
+#footer_main_div a {
     text-decoration: none;
 }
