--- a/css/auth.css
+++ b/css/auth.css
@@ -1,63 +1,55 @@
-body
-{
+body {
     background: rgb(199, 178, 153);
 }
 
-#auth_main_div
-{
+#auth_main_div {
     display: flex;
     flex-direction: column;
     margin: auto;
 }
 
-#auth_form
-{
+#auth_form {
     display: flex;
     flex-direction: column;
-    align-items: center ;
+    align-items: center;
     background-color: white;
     margin: auto;
     padding: 10px 60px 30px 60px;
     border: 2px solid black;
 }
 
-#auth_button_div
-{
+#auth_button_div {
     display: flex;
     flex-direction: column;
-    align-items: center ;
+    align-items: center;
     margin-top: 30px;
 }
 
-#auth_buttom
-{
+#auth_buttom {
     background-color: rgb(199, 178, 153);
-    outline:none;
+    outline: none;
     height: 30px;
     width: 250px;
 }
 
-#auth_main_div h1
-{
-/*    border: 2px solid black;
+#auth_main_div h1 {
+    /*    border: 2px solid black;
     padding: 3px 15px 3px 15px;
     box-shadow: 1px 1px 5px rgb(14, 13, 13);*/
     text-shadow: 1px 1px 1px black;
 }
 
-#auth_main_div label
-{
+#auth_main_div label {
     padding-bottom: 2px;
 }
 
-#auth_main_div input
-{
+#auth_main_div input {
     margin-bottom: 10px;
     width: 250px;
 }
 
-#auth_main_div a:link, a:visited
-{
+#auth_main_div a:link,
+a:visited {
     text-decoration: none;
-    color:black;
+    color: black;
 }
