--- a/css/recette_create.css
+++ b/css/recette_create.css
@@ -68,3 +68,20 @@
     font-size: 14px;
     font-style: italic;
 }
+
+@media all and (max-width: 800px){
+
+    #create_recette_main{
+        padding-right: 10px;
+        padding-left: 10px;
+        width: 500px;
+    }
+
+    #create_recette_main_container{
+        width: 450px;
+    }
+
+    #create_recette_desc{
+        width: 375px
+    }
+}
